2004-01-09  0.8.1.48  Roland Clobus <rcobus@bigfoot.com>
	* common/buildrec.c, common/map.h, common/map_query.c: Bug #1094484:
	Disallow the building of a road during setup phase when the settlement
	cannot be built.
	* common/network.c, meta-server/gnocatan-meta-server.c: Minimal system
	include files.
	* server/buildutil.c, server/develop.c, server/discard.c,
	server/gold.c, server/meta.c, server/player.c, server/pregame.c,
	server/resource.c, server/robber.c, server/server.c, server/trade.c,
	server/turn.c: Minimal list of include files.
	* client/gtk/interface.c: Bug #1027642, Bug #942472: Player did not
	get a turn after the setup phase in a second game with the same
	client.
	* client/gtk/gui.c: Minor spelling change, to make text in about boxes
	of client and server the same.
	
2004-12-25  0.8.1.47  Etan Reisner <deryni@eden.rutgers.edu>
	* server/gtk/gnocatan-server-gtk.c, client/gtk/gui.c: Replaced GNOME
	about dialog with Gtk code.

2004-12-25  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/discard.c, client/gtk/resource.c, client/common/client.c:
	Removed usused variable
	* server/player.c: Removed unused code.
	* common/state.c, common/state.h: Added stack dump code.
	* server/player.c: Added stack names when restoring the disconnect
	player.

2004-12-21  0.8.1.46   Roland Clobus <rclobus@bigfoot.com>
	* configure.ac: Renamed configure.in to the more modern configure.ac
	* autogen.sh: Changed configure.in to configure.ac

2004-12-19  Etan Reisner <deryni@eden.rutgers.edu>
	* ai/client.c, common/gtk/select-game.c,
	meta-server/gnocatan-meta-server.c, server/gtk/gnocatan-server-gtk.c:
	Using g_strdup instead of strdup
	* client/common/callback.c, server/gnocatan-server-console.c: Removing
	unused/duplicate #include lines

004-12-03  0.8.1.45  Roland Clobus <rclobus@bigfoot.com>
	* client/gtk/resource-table.c, client/gtk/resource-table.h,
	client/gtk/Makefile.am: Added a simple way to add a selection for
	resources in the client.