@@ -22,7 +22,7 @@ use-pirate
 chits 5,2,6,3,8,12,9,12,11,4,8,10,2,4,5,6,3,11,5,2,6,3,8,10,9,12,11,4,8,10,9,4,5,6,3,11,12,6,2
 map
 s,s,sw5,s,s,sg4,s,s?5,s
-s,g0,m1,h2,h3,h4,f5,g6,s
+s,g0+,m1,h2,h3,h4,f5,g6+,s
 s,s?0,t7,m8,p9,f10,t11,p12,sw3
 s,f13,s?1,s,s,sg2,s,m14,s
 s,sb1,s,f15,m16,f17,p18,s,so2
